[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/environment/flag.gd" type="Script" id=1]
[ext_resource path="res://assets/environment items/flags/animations/blue.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 35 )

[node name="flag" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "hanging"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -29, 0 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_flag_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_flag_body_exited"]
